--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,3 +1,8 @@
+<input
+  type="text"
+  placeholder="please enter search key...."
+  (input)="onSearch($any($event.target).value)"
+/>
 <p>Books: {{ store.books() | json }}</p>
 <p>Loading: {{ store.isLoading() }}</p>
 
